# video-decode-bench

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/agents/: cpp-engineer.md  cpp-multi-thread-expert.md  cpp-safety-auditor.md  refactoring-specialist.md
.claude/rules/: cpp-file-guidelines.md  project-spec.md
.github/workflows/: ci.yml  release.yml
cmake/: FindFFmpeg.cmake
docker/: Dockerfile
include/video_bench/: version.hpp
scripts/: run_full_benchmark.py
src/: main.cpp
src/benchmark/: benchmark_config.hpp  benchmark_result.hpp  benchmark_runner.cpp  benchmark_runner.hpp
src/decoder/: decoder_pool.cpp  decoder_pool.hpp  decoder_thread.cpp  decoder_thread.hpp  packet_queue.cpp  packet_queue.hpp  packet_reader.cpp  packet_reader.hpp  stream_context.hpp  video_decoder.cpp  video_decoder.hpp
src/monitor/: cpu_monitor.hpp  cpu_monitor_linux.cpp  cpu_monitor_macos.cpp  cpu_monitor_windows.cpp  memory_monitor.hpp  memory_monitor_linux.cpp  memory_monitor_macos.cpp  memory_monitor_windows.cpp  system_info.cpp  system_info.hpp
src/utils/: cli_parser.cpp  cli_parser.hpp  csv_exporter.cpp  csv_exporter.hpp  ffmpeg_utils.hpp  logger.cpp  logger.hpp  output_formatter.cpp  output_formatter.hpp
src/video/: video_info.cpp  video_info.hpp
test_videos/: VIDEO_SPECS.md
